# three-gen-test-task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bittensor_test_task/: app.py  main.py
examples/: http-client.env.json  main.http
nginx/: nginx.conf
tests/: test_simle.py
